# LeafDepotNew

./: .gitignore  README.md  environment.yml
archive/Yolo2BarCode/: main.py
archive/Yolo2BarCode/BarcodeReaderCLI/examples/: -O  brcli-example.csx  brcli-example.go  brcli-example.js  brcli-example.py  brcli_example.java  encoding.sh  folder.sh  tbr.sh  template.txt  types-outputs.sh  url-ordered.sh
archive/Yolo2BarCode/output/run_20250917_231858/: results.json
archive/Yolo2BarCode/output/run_20250917_231927/: results.json
archive/Yolo2BarCode/output/run_20250917_231952/: results.json
archive/Yolo2BarCode/output/run_20250917_232009/: results.json
core/: README.md  __init__.py
core/detection/: __init__.py  detect_utils.py  example_usage.py  predict.py
core/detection/detection/: __init__.py  example_usage.py  full_layer_detector.py  full_layer_verification.py  full_stack_processor.py  layer_clustering.py  partial_stack_processor.py  scene_prepare.py  stack_processor_factory.py
core/detection/utils/: __init__.py  pile_db.py
core/detection/visualization/: __init__.py  scene_visualize.py
core/vision/: __init__.py  barcode_recognizer.py  yolo_detector.py
hardware/cam_sys/: 3d_capture.py  CMakeLists.txt  readme.txt  scan_1_capture.py  scan_2_capture.py
hardware/cam_sys/include/HCNetSDK/: LinuxPlayM4.h
hardware/cam_sys/src/: CamController.cpp  CamController.h  pybind_cam_control.cpp
scripts/: README.md  clean_git_history.sh  start_gateway.sh  start_lms_sim.sh  start_rcs_sim.sh  verify.sh
services/: README.md
services/api/: gateway.py
services/sim/lms/: bins_data.xlsx  custom_utils.py  sim_lms_server.py  start_sim_lms_server.sh
services/sim/lms/bak/: sim_lms_server（复件）.py  工作簿1.xlsx
services/sim/rcs/: sim_rcs_server.py  start_sim_rcs_server.sh  test.py
services/utils/: __init__.py
services/vision/: __init__.py  box_count_service.py
shared/models/: README.md
shared/models/yolo/: data.yaml
shared/tools/: README.md
shared/tools/BarcodeReaderCLI/examples/: basic.sh  brcli-example.cpp  brcli-example.php  brcli-example.rb  config.sh  driver-license.sh  encoding.config
tools/: prepare_images_for_labeling.py
web/: README.md  index.html  package-lock.json  package.json  本地盘点任务清单.csv
web/src/: App.tsx  main.tsx
web/src/components/: LoginForm.tsx
web/src/config/: ip_address.ts
web/src/contexts/: authContext.tsx
web/src/hooks/: types.ts
web/src/pages/: Home.tsx  InventoryProgress.tsx  InventoryStart.tsx
